--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -88,6 +88,6 @@ description='''${mod_description}'''
 [[dependencies.${mod_id}]]
 modId="farmersdelight"
 type="required"
-versionRange="[1.2.4a,)]"
+versionRange="[1.2.4a,)"
 ordering="NONE"
 side="BOTH"
